deploy/apps/postgresql/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgresql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
